improved RomSetManagerView with some fixes, added parser for GoodOldDays DAT