@@ -5,7 +5,7 @@
 	<version>0.1</version>
 	<name>Romizer</name>
 	<properties>
-		<jdk.version>1.8</jdk.version>
+		<jdk.version>10</jdk.version>
 		<jparsec.version>2.2.1</jparsec.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<gson.version>2.3.1</gson.version>
@@ -27,10 +27,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>3.7.0</version>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
+					<compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>java.xml.bind</arg>
+          </compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -78,23 +82,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<!-- mvn package appbundle:bundle -->
-			  <groupId>sh.tak.appbundler</groupId>
-			  <artifactId>appbundle-maven-plugin</artifactId>
-			  <version>1.0.4</version>
-			  <configuration>
-			    <mainClass>jack.rm.Main</mainClass>
-			  </configuration>
-			  <executions>
-			    <execution>
-			      <phase>package</phase>
-			      <goals>
-			        <goal>bundle</goal>
-			      </goals>
-			    </execution>
-			  </executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -154,6 +141,21 @@
 			<version>1.8.2</version>
 			<optional>true</optional>
 		</dependency>
-		
+		<dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>	
+
+		<dependency>
+			<groupId>com.pixbits</groupId>
+			<artifactId>lib</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.jakz</groupId>
+			<artifactId>romlib</artifactId>
+			<version>0.1</version>
+		</dependency>
 	</dependencies>
 </project>
